# crypty

./: Decrypt.cs  Encrypt.cs  Hash.cs  Program.cs  README.md  crypty.bat  crypty.py  install.bat  install.sh  pyproject.toml
src/crypty/: __main__.py  cli.py  crypty.py
